objects/CG_StgSPClaimHistory__c.object
<CustomObject>
    <fields>
        <fullName>ClaimCreatedDate__c</fullName>
        <label>ClaimCreatedDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ClaimFiledDate__c</fullName>
        <label>ClaimFiledDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ClaimStatus__c</fullName>
        <label>ClaimStatus</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClaimSubmittedDate__c</fullName>
        <label>ClaimSubmittedDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CustomerName__c</fullName>
        <label>CustomerName</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FailureDate__c</fullName>
        <label>FailureDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FailureReason__c</fullName>
        <label>FailureReason</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IMS_Claim_Number__c</fullName>
        <label>IMS Claim Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastUpdatedBy__c</fullName>
        <label>LastUpdatedBy</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastUpdatedDate__c</fullName>
        <label>LastUpdatedDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PSN__c</fullName>
        <label>PSN</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PartiallyPaidFlag__c</fullName>
        <label>PartiallyPaidFlag</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SPCode__c</fullName>
        <label>SPCode</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SPName__c</fullName>
        <label>SPName</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SiebelClaimNumber__c</fullName>
        <externalId>true</externalId>
        <label>SiebelClaimNumber</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SourceSystemName__c</fullName>
        <label>SourceSystemName</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WarrantyStartDate__c</fullName>
        <label>WarrantyStartDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>WorkOrderNumber__c</fullName>
        <label>WorkOrderNumber</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>CG_StgSPClaimHistory</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>FailureReason__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>LastUpdatedBy__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>CG_StgSPClaimHistory Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CG_StgSPClaimHistory</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>